--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -613,13 +613,41 @@ footer {
 }
 
 .skills {
-  display: flex;
-  flex-wrap: wrap;
-  width: 50em;
+  max-width: 50em;
   margin-left: auto;
   margin-right: auto;
+  border-style: solid;
+  border-width: 1px;
+  border-color: grey;
+  box-shadow: 5px #888888;
+  position: relative;
+  top: -2em;
+  background: white;
+  border-radius: 1em;
+}
+.skills .title {
+  text-align: center;
+  margin: 1em;
+}
+.skills .skills__inner {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 4em;
+}
+.skills .skills__inner .skills__section ul {
+  list-style-type: circle;
 }
 
+.skills__section {
+  flex-basis: 33%;
+}
+
+@media screen and (max-width: 780px) {
+  .skills__section {
+    flex-basis: 100%;
+  }
+}
 .portfolio h2 {
   text-align: center;
   margin: 1em;
@@ -659,7 +687,7 @@ footer {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  color: #fff;
+  color: white;
   padding: 15px;
   -moz-transition: all 0.4s ease-in-out 0s;
   -webkit-transition: all 0.4s ease-in-out 0s;
@@ -676,6 +704,9 @@ footer {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+.portfolio .portfolio__inner .portfolio__item .item__information .item__text .item__title {
+  color: #0066ff;
 }
 .portfolio .portfolio__inner .portfolio__item .item__information:hover {
   opacity: 1;
