--- a/styles/scss/layout/_layout.scss
+++ b/styles/scss/layout/_layout.scss
@@ -49,11 +49,50 @@
 }
 
 .skills {
-    display: flex;
-    flex-wrap: wrap;
-    width: 50em;
+    max-width: 50em;
     margin-left: auto;
     margin-right: auto;
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+    box-shadow: 5px #888888;
+    position: relative;
+    top: -2em;
+    background: white;
+    border-radius: 1em;
+
+    .title {
+        text-align: center;
+        margin: 1em;
+    }
+
+    .skills__inner {
+        display: flex;
+        flex-wrap: wrap;   
+        width: 100%;
+        margin-bottom: 4em;
+        .skill__title {
+            
+        }
+        .skills__section {
+           
+
+            ul {
+                list-style-type: circle;
+            }
+        } 
+    }
+}
+
+.skills__section {
+    flex-basis: 33%;
+}
+
+@media screen and (max-width: 780px) {
+
+    .skills__section {
+        flex-basis: 100%;
+    }
 }
 
 .portfolio {
@@ -96,7 +135,7 @@
                 width: 100%;
                 height: 100%;
                 background: rgba(0, 0, 0, 0.6);
-                color: #fff;
+                color: white;
                 padding: 15px;
                 -moz-transition: all 0.4s ease-in-out 0s;
                 -webkit-transition: all 0.4s ease-in-out 0s;
@@ -113,6 +152,10 @@
                     -webkit-transform: translate(-50%, -50%);
                     -ms-transform: translate(-50%, -50%);
                     transform: translate(-50%, -50%);
+                    .item__title {
+                        color: $primary-color;
+                    }
+
                 }
      
 
