--- a/styles/scss/layout/_layout.scss
+++ b/styles/scss/layout/_layout.scss
@@ -49,7 +49,7 @@
 }
 
 .skills {
-    max-width: 50em;
+    max-width: 60em;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
@@ -71,12 +71,8 @@
         flex-wrap: wrap;   
         width: 100%;
         margin-bottom: 4em;
-        .skill__title {
-            
-        }
+        justify-content: space-evenly;
         .skills__section {
-           
-
             ul {
                 list-style-type: circle;
             }
@@ -85,13 +81,21 @@
 }
 
 .skills__section {
-    flex-basis: 33%;
+    padding: 1em;
+    flex-basis: 29%;
+}
+
+.programming-languages, .computer-software {
+    border-right: 1px solid grey; 
 }
 
 @media screen and (max-width: 780px) {
-
     .skills__section {
         flex-basis: 100%;
+    }
+    .programming-languages, .computer-software {
+        border-right: none;
+        border-bottom: 1px solid grey; 
     }
 }
 
