basic design mockup complete

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,14 @@
 
 @import "./styling/navbar.scss";
 @import "./styling/portfolio.scss";
-
+@import "./styling/footer.scss";
 
 h6,h4,h3,h2,h1 {
   font-family: 'Source Sans Pro', sans-serif;
+}
+
+ul {
+  list-style-type: none;
 }
 
 p, a {
@@ -93,8 +97,5 @@ button:focus {
   }
 }
   
-/* footer */
-.footer__image {
-  height: 1.5em;
-}
+
 
