--- a/src/styling/navbar.scss
+++ b/src/styling/navbar.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
-/*navbar */
+/* navbar */
 .navbar {
   position: fixed;
   width: 100%;
@@ -9,13 +9,6 @@
 
 .nav {
   width: 100%;
-}
-
-.navbar-brand {
-  color: white;
-  &:hover {
-    color: white;
-  }
 }
 
 .nav--scroll {
@@ -27,7 +20,16 @@
   }
 }
 
+.navbar-brand {
+  color: white;
+  &:hover {
+    color: white;
+  }
+}
+
 .nav-link { 
+  padding-right: .5rem !important;
+  padding-left: .5rem !important;
   color: white;
   font-size: 1em;
   &:hover {
@@ -35,15 +37,9 @@
     border-bottom: 2px solid #0052d4;
   }
 }
-
-.nav-link {
-  padding-right: .5rem !important;
-  padding-left: .5rem !important;
-}
   
 .open-overlay {
-  background-color: #4364f7;
-  outline: 2px solid #0052d4; 
+  background-color: #0052d4;
   color: white;
   display: none;
   svg {
@@ -61,7 +57,7 @@
 }
 
 /* overlay */
-.nav-overlay {
+.nav__overlay {
   height: 0;
   width: 100%;
   position: fixed;
@@ -74,28 +70,6 @@
   transition: 0.5s;
 }
 
-.overlay-content {
-  position: relative;
-  text-align: center;
-}
-
-.overlay__links {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  .overlay-link a{
-
-    font-size: 15vh;
-    &:hover {
-      border-bottom: 0.20em solid white; 
-      cursor: pointer;
-
-      color: white;
-    }
-  }
-
-}
-
 .close-overlay {
   z-index: 1;
   svg {
@@ -106,4 +80,25 @@
   top: 12px;
   right: 18px;
 }
+
+.overlay__content {
+  position: relative;
+  text-align: center;
+}
+
+.overlay__links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  .overlay-link a{
+    font-size: 15vh;
+    &:hover {
+      border-bottom: 0.20em solid white; 
+      cursor: pointer;
+
+      color: white;
+    }
+  }
+}
+
 
