--- a/src/styling/components/navbar.scss
+++ b/src/styling/components/navbar.scss
@@ -1,5 +1,3 @@
-@import "~bootstrap/scss/bootstrap";
-
 /* navbar */
 .navbar {
   position: fixed;
@@ -27,9 +25,9 @@
   }
 }
 
-.nav-link { 
-  padding-right: .5rem !important;
-  padding-left: .5rem !important;
+.nav-link {
+  padding-right: 0.5rem !important;
+  padding-left: 0.5rem !important;
   color: white;
   font-size: 1em;
   &:hover {
@@ -37,10 +35,9 @@
     border-bottom: 2px solid #0052d4;
   }
 }
-  
+
 .open-overlay {
-  background-color: #0052d4;
-  color: white;
+  color: $dark-grey;
   display: none;
   svg {
     height: 2em;
@@ -53,6 +50,12 @@
   }
   .open-overlay {
     display: inline;
+  }
+}
+
+@media only screen and (max-height: 400px) {
+  .overlay-link {
+    font-size: 0.5em;
   }
 }
 
@@ -87,18 +90,16 @@
 }
 
 .overlay__links {
+  font-size: 4em;
   margin: 0;
   padding: 0;
   list-style-type: none;
-  .overlay-link a{
-    font-size: 15vh;
+  .overlay-link a {
     &:hover {
-      border-bottom: 0.20em solid white; 
+      border-bottom: 0.2em solid white;
       cursor: pointer;
 
       color: white;
     }
   }
 }
-
-
