--- a/src/index.scss
+++ b/src/index.scss
@@ -1,60 +1,27 @@
-@import '~bootstrap/scss/bootstrap';
-@import './styling/vendor/normalize.css';
+//variables and theme
+/*Colors*/
+$primary-color: #000;
+$secondary-color: #000;
+$highlight-color: #000;
+$secondary-highlight-color: #000;
+/*Fonts*/
+$primary-font: "Montserrat", sans-serif;
+$secondary-font: "Raleway", sans-serif;
 
-@import './styling/constants/variables.scss';
-
-//global styles
-h6,
-h4,
-h3,
-h2,
-h1 {
-  font-family: $primary-font;
+//general styling
+html,
+body {
+  min-height: 100%;
 }
 
-p,
-a {
+body {
   font-family: $secondary-font;
 }
-
-a {
-  text-decoration: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $secondary-font;
 }
-
-html {
-  scroll-behavior: smooth;
-}
-
-ul {
-  margin: 0;
-  list-style-type: none;
-}
-
-button {
-  background: none;
-  outline: none;
-  border: none;
-  border-style: none;
-  &:active {
-    border: none;
-    outline: none;
-  }
-  &:focus {
-    border: none;
-    outline: none;
-  }
-}
-
-.vertical-center {
-  min-height: 100%; /* Fallback for browsers do NOT support vh unit */
-  min-height: 100vh; /* These two lines are counted as one :-)       */
-
-  display: flex;
-  align-items: center;
-}
-
-@import './styling/components/navbar.scss';
-@import './styling/components/hero.scss';
-@import './styling/components/portfolio.scss';
-@import './styling/components/contact.scss';
-@import './styling/components/footer.scss';
