--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -4,40 +4,49 @@
 
 //change font size on resize
 @media (max-width: 992px) {
-  .menu {
+  .menu,
+  .menu_button {
     font-size: 0.9rem;
   }
 }
 @media (max-width: 768px) {
-  .menu {
+  .menu,
+  .menu_button {
     font-size: 0.75rem;
+  }
+}
+@media (max-width: 555px) {
+  .menu,
+  .menu_button {
+    font-size: 0.6rem;
   }
 }
 
 //menu
 .menu.active {
   .menu_page {
-    display: block;
+    display: flex;
   }
 }
 
 .menu_page {
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  text-align: center;
+  overflow-y: auto;
   display: none;
   height: 100%;
   width: 100%;
   background: black;
-  position: fixed;
   font-size: 6em;
   z-index: 2;
 
   .links {
+    margin: auto;
     display: flex;
     flex-direction: column;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
   }
   li {
     position: relative;
@@ -80,11 +89,11 @@
 .menu_button {
   z-index: 3;
   position: fixed;
-  top: 2em;
+  top: 1.5em;
   left: 1em;
   .icon {
-    height: 2em;
-    width: auto;
+    width: 3em;
+    height: auto;
   }
   &:hover {
     cursor: pointer;
