--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -1,15 +1,13 @@
 .projects {
   font-size: 1rem;
-  text-align: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .project_item {
-  background: #ffffff;
-  flex-basis: 33%;
-  margin: 0.1rem 0;
+  background: #000000;
+  width: calc(1 / 3 * 100% - 4px);
+  margin: 2px;
 }
 .project_item:hover {
   cursor: pointer;
@@ -26,14 +24,30 @@
     font-size: 0.75rem;
   }
   .project_item {
-    flex-basis: 49.5%;
+    width: calc(1 / 2 * 100% - 4px);
   }
 }
+
+.project-filter {
+  display: flex;
+  margin: 1em 0;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 1rem;
+  span {
+    padding: 0.5em;
+    border: 2px solid #6d6d6d;
+    background-color: #424242;
+    margin: 0.3em;
+    cursor: pointer;
+  }
+}
+
 @media (max-width: 555px) {
   .projects {
     font-size: 0.5rem;
   }
   .project_item {
-    flex-basis: 100%;
+    width: 100%;
   }
 }
