--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,3 +1,9 @@
+#home-page {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+
 /*links*/
 /*more link*/
 .more-link {
@@ -5,7 +11,6 @@
   margin: 0.1rem 0;
   font-size: 2em;
   font-weight: 700;
-  background: #c4c4c4;
   padding: 0.5em 1em;
 }
 /*other link*/
