base website complete

--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -1,7 +1,7 @@
 .layout {
   font-size: 1rem;
   padding: 2em 4em 0em 4em;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .section-title {
   font-size: 4em;
