--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -46,3 +46,24 @@ a {
   width: 100%;
   height: 100%;
 }
+
+/*scrollbar*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(255, 255, 255, 0.4);
+}
+
+.scroll {
+  scrollbar-color: rgba(255, 255, 255, 0.4) black;
+}
