--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,8 @@
+#header-animation {
+  height: 100%;
+  width: 100%;
+}
+
 #header {
   position: relative;
   min-height: 30rem;
@@ -6,6 +11,7 @@
 
 /*title*/
 .title_container {
+  padding: 4em;
   font-size: 1rem;
   text-align: center;
   position: absolute;
@@ -13,11 +19,12 @@
   top: 50%;
   transform: translate(-50%, -50%);
   .title {
-    font-size: 6em;
+    font-size: 4em;
     line-height: 1;
+    margin-bottom: 0.5rem;
   }
   .subtitle {
-    font-size: 3em;
+    font-size: 2em;
     line-height: 1;
   }
 }
@@ -40,6 +47,7 @@
   cursor: pointer;
 }
 .button_label {
+  font-family: "Raleway", sans-serif;
   font-size: 1.5em;
   margin: 0.5em;
   display: inline-block;
