--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -28,29 +28,21 @@
   padding: 0.5em 1em;
 }
 
-.github-link {
+.page-link {
   margin: 0.1rem 0;
   background: black;
-  flex-basis: 100%;
+  flex: 1;
+  font-size: 1rem;
+  text-align: center;
 }
-.github-link:hover {
-  cursor: pointer;
-}
-
-.devpost-link {
-  margin: 0.1rem 0;
-  background: #154c75;
-  flex-basis: 100%;
-}
-.devpost-link:hover {
+.page-link:hover {
   cursor: pointer;
 }
 
 /*change font size on resize*/
 @media (max-width: 555px) {
   .project,
-  .github-link,
-  .devpost-link {
+  .page-link {
     flex-basis: 100%;
   }
   .links {
